<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/couleur_gris"
    tools:context=".ui.neighbour_list.InfoNeighbourActivity">

    <ImageView
        android:id="@+id/voisin_image"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:scaleType="centerCrop" />

    <TextView
        android:id="@+id/voisin_nom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/voisin_image"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="25dp"
        android:gravity="center"
        android:textColor="@android:color/background_light"
        android:textSize="30sp" />

    <ImageButton
        android:id="@+id/button_retour"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/fondTransparent"
        android:scaleType="centerCrop"
        android:src="@android:drawable/ic_menu_revert" />


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/neighbour_favori"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignBottom="@+id/voisin_image"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="-30dp"
        android:clickable="true"
        app:backgroundTint="@color/couleur_gris"
        app:srcCompat="@android:drawable/btn_star_big_off" />



    <android.support.v7.widget.CardView
        android:id="@+id/cardview1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/voisin_image"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        app:cardElevation="5dp"
        card_view:cardCornerRadius="10dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/re_nom2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="13dp"
                android:textColor="@android:color/black"
                android:textSize="23sp" />

            <ImageView
                android:id="@+id/ligneGris"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/re_nom2"
                app:srcCompat="@color/couleur_gris" />

            <ImageView
                android:id="@+id/adresse_photo"
                android:layout_width="50dp"
                android:layout_height="45dp"
                android:layout_below="@id/ligneGris"
                android:padding="12dp"
                app:srcCompat="@drawable/map_marker" />

            <TextView
                android:id="@+id/editText_adresse"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_below="@id/ligneGris"
                android:layout_toEndOf="@+id/adresse_photo"
                android:text="Adresse"
                android:padding="12dp" />

            <ImageView
                android:id="@+id/phone_photo"
                android:layout_width="50dp"
                android:layout_height="45dp"
                android:layout_below="@id/adresse_photo"
                android:padding="12dp"
                app:srcCompat="@drawable/phone_c" />

            <TextView
                android:id="@+id/editText_phone"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_toEndOf="@+id/adresse_photo"
                android:layout_below = "@id/editText_adresse"
                android:text="Numero"
                android:padding="12dp" />

            <ImageView
                android:id="@+id/email_photo"
                android:layout_width="50dp"
                android:layout_height="45dp"
                android:layout_below="@id/phone_photo"
                android:padding="12dp"
                app:srcCompat="@drawable/earth" />

            <TextView
                android:id="@+id/editText_email"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_toEndOf="@+id/adresse_photo"
                android:layout_below = "@id/editText_phone"
                android:text="Site"
                android:padding="12dp" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cardview1"
        android:layout_gravity="center"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        app:cardElevation="5dp"
        card_view:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/a_propos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="13dp"
                android:text="A propos de moi"
                android:textColor="@android:color/black"
                android:textSize="23sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                app:srcCompat="@color/couleur_gris" />

            <TextView
                android:id="@+id/editText_multiline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="4"
                android:maxLines="4"
                android:padding="10dp"
                android:text=" Text multiligne : ............................. ............. 1 ..................................................................... " />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>